<resources>
    <string name="app_name">To Do Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_tasks">add tasks</string>
    <string name="safe">safe</string>
    <string name="delete">delete</string>
    <string name="description">Description</string>
    <string name="label">label</string>
    <string name="add">Add</string>
    <string name="to_do_task">to do task</string>
    <string name="to_do">TODO</string>

</resources>