<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        tools:context=".ui.UpdateTaskFragment">

        <EditText
            android:id="@+id/task_name"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="308dp"
            android:layout_marginEnd="16dp"
            android:maxLength="62"
            android:hint="@string/to_do"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_view_label"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/task_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLength="93"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="@+id/task_name"
            app:layout_constraintStart_toEndOf="@+id/image_view_description"
            app:layout_constraintTop_toBottomOf="@+id/task_name" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:text="@string/safe"
            android:textSize="18sp"
            app:icon="@drawable/ic_update"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_delete"
            app:layout_constraintEnd_toStartOf="@+id/button_delete"
            app:layout_constraintStart_toStartOf="@+id/task_description" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/delete"
            android:textSize="18sp"
            app:icon="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="@+id/task_description"
            app:layout_constraintTop_toBottomOf="@+id/task_description" />

        <ImageView
            android:id="@+id/image_view_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="320dp"
            android:contentDescription="@string/label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_label" />

        <ImageView
            android:id="@+id/image_view_description"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_label"
            app:srcCompat="@drawable/ic_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>